# app

./: .gitignore  PROJECT_SUMMARY.md  README.md
frontend/: .env
frontend/src/: App.js  index.css
frontend/src/components/: Navigation.jsx  theme-provider.jsx
frontend/src/pages/: ChartRendererPage.jsx  DataEnginePage.jsx  HomePage.jsx  ParallelComputePage.jsx  QueryOptimizerPage.jsx
rust-modules/: Cargo.toml  README.md
rust-modules/chart-renderer/: Cargo.toml
rust-modules/chart-renderer/src/: lib.rs
rust-modules/data-engine/: Cargo.toml
rust-modules/data-engine/src/: lib.rs
rust-modules/parallel-compute/: Cargo.toml
rust-modules/parallel-compute/src/: lib.rs
rust-modules/query-optimizer/: Cargo.toml
rust-modules/query-optimizer/src/: lib.rs
scripts/: build-module.sh  build-wasm.sh
