[workspace]
members = [
    "data-engine",
    "chart-renderer",
    "query-optimizer",
    "parallel-compute",
]

[workspace.dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
