[package]
name = "chart-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
