[package]
name = "parallel-compute"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Worker",
    "WorkerOptions",
    "MessageEvent",
] }

# For parallel processing (requires WASM threads support)
# rayon = "1.8"
# wasm-bindgen-rayon = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
